<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_IndexedPositionStates" Id="{84c6d19f-be4d-4d36-a173-d7c1ad842cf8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_IndexedPositionStates :
(
	Starved,
	Idle,
	Blocked,
	ReceivingLeft,
	ReceivingRight,
	ReceivingForward,
	ReceivingReverse,
	SendingLeft,
	SendingRight,
	SendingForward,
	SendingReverse,
	Bypass,
	Fault
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>